A few fixes to overflows and the table of contents

--- a/styles/global.css
+++ b/styles/global.css
@@ -59,4 +59,29 @@ body {
 
 ::-webkit-scrollbar-track {           
     background-color: var(--bg-color);
+
+/* Fix wide TOC */
+.notion-aside {
+  overflow-x: hidden;
+}
+
+.notion-aside-table-of-contents {
+  max-width: 80%;
+}
+
+.notion-table-of-contents-item-body {
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  line-height: 1.3;
+}
+
+/* Fix title overflow */
+.notion-header .breadcrumb.active {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.notion-header .breadcrumb.active > .title {
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
