--- a/styles/notion.css
+++ b/styles/notion.css
@@ -188,7 +188,7 @@
   display: flex;
   align-items: center;
   padding: 0;
-  min-height: 23px;
+  /* min-height: 23px; */
 }
 
 .notion-page-cover-wrapper,
